' Generated by UML Generator
' Encoded: hLAzJWCn3Dxp51wlGgsOEw2YJWnKfUK5V8cvYxWufyGP3cYVdHmSK6W42qi6Vp-sFsSL1OCarwduQBd7W0vqXp5UYmHR9w4RxNbldmWkLMiDWRP1TwJK6mlM6Dij3evOzX9Gg1dWMG7CTGRkYGq5CaimFjLPbElp_5mKL5L9C1l9FGuLEfzOFijBgBtl27d46vB9wvQazQRAS7Qrt4pe-iHv1ATX3afP5WeFg0bAEnp_w7pyfVFX8w2xNJ6UllLCc-Hg2YVJlgTp9gaAxF-9Pljb_7tuqbqNYvUhdq6fy_sAj5NEF_-oLm
' URL: http://www.plantuml.com/plantuml/uml/hLAzJWCn3Dxp51wlGgsOEw2YJWnKfUK5V8cvYxWufyGP3cYVdHmSK6W42qi6Vp-sFsSL1OCarwduQBd7W0vqXp5UYmHR9w4RxNbldmWkLMiDWRP1TwJK6mlM6Dij3evOzX9Gg1dWMG7CTGRkYGq5CaimFjLPbElp_5mKL5L9C1l9FGuLEfzOFijBgBtl27d46vB9wvQazQRAS7Qrt4pe-iHv1ATX3afP5WeFg0bAEnp_w7pyfVFX8w2xNJ6UllLCc-Hg2YVJlgTp9gaAxF-9Pljb_7tuqbqNYvUhdq6fy_sAj5NEF_-oLm
' Generated on: 2026-04-25T00:51:38.654792

@startuml
skinparam classAttributeIconSize 0
hide circle

class CashPaymentStrategy {
  -cashTendered: double
  --
  +CashPaymentStrategy(cashTendered: double)
  +pay(amount: double): boolean
  +getPaymentMethod(): String
  +getCashTendered(): double
}

interface PaymentStrategy {
  ~pay(amount: double): boolean
  ~getPaymentMethod(): String
}

class QRPaymentStrategy {
  -phoneNumber: String
  --
  +QRPaymentStrategy(phoneNumber: String)
  +pay(amount: double): boolean
  +getPaymentMethod(): String
  +getPhoneNumber(): String
}

CashPaymentStrategy ..|> PaymentStrategy
QRPaymentStrategy ..|> PaymentStrategy
@enduml